# floating-distance

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: codecov.yml  main.yml  rust.yml
benchmarks/no-simd/: Cargo.toml  bench.rs
benchmarks/simd/: Cargo.toml  bench.rs
benchmarks/utils/: Cargo.toml  lib.rs
examples/default/: cosine_similarity.rs  euclidean_distance.rs  main.rs  manhattan_distance.rs  metric_polymorphism.rs
src/: float.rs  lib.rs  metric.rs  numeric.rs  simd.rs  space.rs  vector.rs
src/distance/: algorithms.rs  mod.rs  pattern.rs  presets.rs
src/metric/: compare.rs  measure.rs  metric.rs  mod.rs  pattern.rs
tests/: mod.rs
tests/distance/: mod.rs
tests/metric/: compare.rs  edge_cases.rs  measure.rs  mod.rs
tests/simd/: cosine.rs  euclidean.rs  inner_product.rs  manhattan.rs  mod.rs
tests/space/: mod.rs
tests/vector/: mod.rs
utils/benchmarks/: Cargo.toml  lib.rs
