[package]
name = "floating-distance"
version = "0.1.0"
authors = ["Asher Jingkong Chen"]
description = "Compute distance between floating-point vectors in Rust"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AsherJingkongChen/distance.git"
documentation = "https://docs.rs/floating-distance"
rust-version = "1.60.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
simd = []

[profile.release]
lto = true

[dependencies]
num-traits = "0.2.16"

[dev-dependencies]
rand = "0.8.5"
