[package]
name = "floating-distance"
version = "0.1.0"
authors = ["Asher Jingkong Chen"]
description = "Measure distance between floating-point vectors in Rust"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AsherJingkongChen/floating-distance.git"
documentation = "https://docs.rs/floating-distance"
rust-version = "1.60.0"
resolver = "2"
keywords = ["algorithm", "distance", "embedding", "simd", "vector"]
categories = ["algorithms", "mathematics"]

[badges]
maintenance = { status = "actively-developed" }

[features]
simd = []

[dependencies]
num-traits = "0.2.16"
cfg-if = "1.0.0"

[dev-dependencies]
rand = "0.8.5"
approx = "0.5.1"

[workspace]
members = [
  "benchmarks/no-simd",
  "benchmarks/simd"
]